<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@null"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/switchwindow" />

    <LinearLayout
        android:id="@+id/container3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top|left"
        android:orientation="horizontal">
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/container2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <ScrollView
                android:layout_width="319dp"
                android:layout_height="match_parent">


                <LinearLayout
                    android:id="@+id/container4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/buttonCommon"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/style_btn_start"
                        android:text="@string/common_ru"
                        android:textColor="@color/stred"
                        android:textAllCaps="false"
                        android:textStyle="italic" />

                    <Button
                        android:id="@+id/buttonAnciety"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/style_btn_start"
                        android:text="@string/antiquity_ru"
                        android:textColor="@color/stred"
                        android:textAllCaps="false"
                        android:textStyle="italic" />

                    <Button
                        android:id="@+id/buttonMedival"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/style_btn_start"
                        android:text="@string/medival_ru"
                        android:textColor="@color/stred"
                        android:textAllCaps="false"
                        android:textStyle="italic" />

                    <Button
                        android:id="@+id/buttonNew1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/style_btn_start"
                        android:text="@string/new_ru"
                        android:textColor="@color/stred"
                        android:textAllCaps="false"
                        android:textStyle="italic" />

                    <Button
                        android:id="@+id/buttonNew2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/style_btn_start"
                        android:text="@string/newtime_ru"
                        android:textColor="@color/stred"
                        android:textAllCaps="false"
                        android:textStyle="italic" />

                    <Button
                        android:id="@+id/buttonSoviets"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/style_btn_start"
                        android:text="@string/soviets_ru"
                        android:textColor="@color/stred"
                        android:textAllCaps="false"
                        android:textStyle="italic" />

                    <Button
                        android:id="@+id/buttonNewest"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/style_btn_start"
                        android:text="@string/newesttime_ru"
                        android:textColor="@color/stred"
                        android:textAllCaps="false"
                        android:textStyle="italic" />

                </LinearLayout>
            </ScrollView>

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>